crates/rimz/src/sidebar_renderer/render/snapshots/rimz__sidebar_renderer__render__tests__group_cap_with_overflow.snap
---
source: crates/rimz/src/sidebar_renderer/render/tests.rs
assertion_line: 83
expression: screen
---
 ⌘ query-engine

 ◎ 0
 ¤ 9
 ──────────────────────────────────
 ? 0   ! 0   ○ 0   ⏸︎ 0   ⢿ 9   ✓ 0

▏⑂ main ┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄
▌⣾ codex · 258k
▌  task-0
▌  ▢ ────────────────────────    0%
▏⣾ codex · 258k
▏  task-1
▏  ▢ ────────────────────────    0%
▏⣾ codex · 258k
▏  task-2
▏  ▢ ────────────────────────    0%
▏⣾ codex · 258k
▏  task-3
▏  ▢ ────────────────────────    0%
▏⣾ codex · 258k
▏  task-4
▏  ▢ ────────────────────────    0%
▏⣾ codex · 258k
▏  task-5
▏  ▢ ────────────────────────    0%
▏  +3 more










             ? for help
