crates/rimz/src/sidebar_renderer/render/snapshots/rimz__sidebar_renderer__render__tests__l0_density_minimal_row.snap
---
source: crates/rimz/src/sidebar_renderer/render/tests.rs
assertion_line: 83
expression: screen
---
 ⌘ query-engine

 ◎ 0
 ¤ 1
 ──────────────────────
 ? 0   ! 0   ○ 0   ⏸︎ 0
▏⑂ main ┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄
▌⣾ codex
▌  compile
▌  ▢ ────────────    0%
       ? for help
