crates/rimz/src/sidebar_renderer/render/snapshots/rimz__sidebar_renderer__render__tests__make_up_filter_failed.snap
---
source: crates/rimz/src/sidebar_renderer/render/tests.rs
expression: screen
---
 ⌘ query-engine

 ◎ 0
 ¤ 2
 ────────────────────────────────────
 ? 0   ! 1   ○ 0   ⏸︎ 0     ⢿ 1   ✓ 0

▏⑂ main ┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄
▌! claude
▌  db migrate
▌  ▢ ──────────────────────────    0%








        ␣ next ?!   ? for help
