crates/rimz/src/sidebar_renderer/render/snapshots/rimz__sidebar_renderer__render__tests__process_row_resource_stats.snap
---
source: crates/rimz/src/sidebar_renderer/render/tests.rs
assertion_line: 83
expression: screen
---
 ⌘ query-engine

 ◎ 0
 ¤ 0
 ──────────────────────────────────────────────────────

▏⑂ main ┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄
▌⣾ cargo                       C  34%  M 512M  ⇅   8M/s
▌  cargo build --release

 no agents yet
 install hooks:
 rimz hooks install claude
                       ? for help
