crates/rimz/src/sidebar_renderer/render/snapshots/rimz__sidebar_renderer__render__tests__provider_dashboard_codex_tab.snap
---
source: crates/rimz/src/sidebar_renderer/render/tests.rs
expression: screen
---
 ⌘ query-engine

 ◎ 0
 ¤ 1
 ────────────────────────────────────────────────────
 ? 0   ! 0   ⏸︎ 0   ✓ 0                     ⢿ 1   ○ 0

▏⑂ main ┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄
▌⣾ claude · Opus 4.8 · high · 200k              $1.27
▌  ledger refactor
▌  ▣ ━━━━━━━━━━━━━━━━────────────────────────── 38.2%
▌  ▤ 76k · ◌ 68k ◍ 6k ↘ 1k ↗ 2k














 ─── Claude ──── Codex ──────────────────────────────

           ChatGPT Pro · v0.135.0
  ▐▛███▜▌  ◎ 3  ◇ 88k ↘ 76k ↗ 12k ◌ 8k          $1.20
 ▝▜█████▛▘ ∞   ▱▱▱▱▱▱▱▱▱▱▱▱▱▱▱▱▱▱▱▱▱▱▱▱▱▱▱▱▱
   ▘▘ ▝▝

                      ? for help
