crates/rimz/src/sidebar_renderer/render/snapshots/rimz__sidebar_renderer__render__tests__scroll_manual_offset_holds.snap
---
source: crates/rimz/src/sidebar_renderer/render/tests.rs
assertion_line: 83
expression: screen
---
 ⌘ query-engine

 ◎ 0
 ¤ 6
 ────────────────────────────────────
 ? 0   ! 0   ○ 0   ⏸︎ 0     ⢿ 6   ✓ 0
▏⣾ codex · 258k
▏  task-1
▏  ▢ ──────────────────────────    0%
▏
▏⣾ codex · 258k
▏  task-2
▏  ▢ ──────────────────────────    0%

 ⑂ beta
 ⣾ codex · 258k
   task-3
              ? for help
