crates/rimz/src/sidebar_renderer/render/snapshots/rimz__sidebar_renderer__render__tests__scroll_pins_tall_expanded_card_top.snap
---
source: crates/rimz/src/sidebar_renderer/render/tests.rs
expression: screen
---
 ⌘ query-engine

 ◎ 0
 ¤ 1
 ────────────────────────────────────────────────────
 ? 0   ! 0   ○ 0   ⏸︎ 0                     ⢿ 1   ✓ 0

▏⑂ main ┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄
▌_ claude
▌  db migrate
▌  ▢ ──────────────────────────────────────────    0%
▌  ⧉ subagents (4)
                      ? for help
